// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base - onMouseEnter & onMouseLeave 1`] = `
<button
  className="iogart-ui iogart-base iogart-button-base"
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Button base
</button>
`;

exports[`Button Base - onMouseEnter & onMouseLeave 2`] = `
<button
  className="iogart-ui iogart-base iogart-button-base iogart--hover"
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Button base
</button>
`;

exports[`Button Base - onMouseEnter & onMouseLeave 3`] = `
<button
  className="iogart-ui iogart-base iogart-button-base"
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Button base
</button>
`;
